# fastapi_crud_app

./: .env.example  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 0c89d1c4534b_create_user_and_post_models.py
docker/mysql/: my.cnf
docker/mysql/docker-entrypoint-initdb.d/: createdb.example.sql
docker/python/: Dockerfile  setup.sh
docker_persistent_data/: .gitignore
src/: config.py  database.py  main.py  utils.py
src/auth/: dependencies.py  jwt_handler.py  models.py  router.py  schemas.py  service.py
src/posts/: models.py  router.py  schemas.py
